LU-435 Add VM_FAULT_RETRY handling

2.6.32 kernel add VM_FAULT_RETRY option in handle page fault, we
need handle it as well.

Signed-off-by: Bobi Jam <bobijam@whamcloud.com>
Change-Id: I71d1c51bc297d1e0e8cc38e11b8a724edf9d1ae7
Reviewed-on: http://review.whamcloud.com/997
Tested-by: Hudson
Reviewed-by: Jinshan Xiong <jay@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>